--- a/src/styles/Maintenance.module.scss
+++ b/src/styles/Maintenance.module.scss
@@ -4,11 +4,12 @@
     display: flex;
     flex-flow: column-reverse;
     min-width: 375px;
+    justify-content: space-around;
 }
 
 .MaintenanceBackground {
-    width: 100vw;
-    height: 65vh;
+    width: 100%;
+    height: 80vh;
     background-image: url("../assets/images/blueprint.svg");
     background-repeat: no-repeat;
     background-size: cover;
@@ -19,7 +20,7 @@
     flex-flow: column;
     align-items: center;
     justify-content: center;
-    height: 30vh;
+    height: 20vh;
 
     h4 {
         margin-bottom: 3vw;
