--- a/src/styles/Maintenance.module.scss
+++ b/src/styles/Maintenance.module.scss
@@ -4,12 +4,11 @@
     display: flex;
     flex-flow: column-reverse;
     min-width: 375px;
-    justify-content: space-around;
 }
 
 .MaintenanceBackground {
-    width: 100%;
-    height: 80vh;
+    width: 100vw;
+    height: 65vh;
     background-image: url("../assets/images/blueprint.svg");
     background-repeat: no-repeat;
     background-size: cover;
@@ -20,7 +19,7 @@
     flex-flow: column;
     align-items: center;
     justify-content: center;
-    height: 20vh;
+    height: 30vh;
 
     h4 {
         margin-bottom: 3vw;
