--- a/src/styles/base/Base.module.scss
+++ b/src/styles/base/Base.module.scss
@@ -1,5 +1,10 @@
 @import './Setup.module.scss';
 
+.BodyFreeze {
+    position: fixed;
+    overflow: hidden;
+}
+
 h1 {
     font-size: mob(18px);
 }
